<resources>
    <string name="app_name">Easify</string>

    <string name="com_spotify_sdk_redirect_scheme">com.deniz.easify</string>
    <string name="com_spotify_sdk_redirect_host">callback</string>

    <string name="spotify_uri_callback">com.deniz.easify://callback</string>

    <string name="dialog_error_title">Ups</string>
    <string name="dialog_positive_button_text">Try Again</string>
    <string name="dialog_negative_button_text">Exit</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_common_error_text">Something went wrong. Please go back and try again.</string>

    <string name="dialog_rate_question">How do you like Easify so far?</string>
    <string name="dialog_rate_you_can_rate_later_title">Alright!</string>
    <string name="dialog_rate_you_can_rate_later_body">If you change your mind, you can always rate us through your profile :)</string>

    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <!-- Search Fragment -->
    <string name="fragment_search_rate">Rate</string>
    <string name="fragment_search_rate_later">Later</string>
    <string name="fragment_search_never_show_rate">Don\'t show again</string>

    <!-- Features Fragment -->
    <string name="fragment_features_album">ALBUM</string>
    <string name="fragment_features_danceability">Danceability: %.2f</string>
    <string name="fragment_features_energy">Energy: %.2f</string>
    <string name="fragment_features_speechiness">Speechiness: %.2f</string>
    <string name="fragment_features_acousticness">Acousticness: %.2f</string>
    <string name="fragment_features_instrumentalness">Instrumentalness: %.2f</string>
    <string name="fragment_features_liveness">Liveness: %.2f</string>
    <string name="fragment_features_valence">Valence: %.2f</string>
    <string name="fragment_features_tempo">Tempo: %.2f</string>
    <string name="fragment_features_search_similar">Search Similar</string>

    <!-- Discover Fragment -->
    <string name="fragment_discover_album">Discover</string>

    <!-- Recommended Tracks Fragment -->
    <string name="fragment_recommended_tracks_title">Found %d Tracks</string>
    <string name="fragment_recommended_tracks_create_playlist_name">Similar to %s - by Easify</string>
    <string name="fragment_recommended_tracks_create_playlist_desc">This playlist is automatically created by Easify just for your taste on %s</string>
    <string name="fragment_recommended_tracks_create_playlist_succeeded">Your new playlist is created.</string>
    <string name="fragment_recommended_tracks_create_playlist_failed">Creating playlist failed. Please try again.</string>
    <string name="fragment_recommended_tracks_should_download_spotify">You should download Spotify in order to listen to this song</string>

    <string name="fragment_discover_title">Search For Your Taste</string>

    <!-- History Fragment -->
    <string name="fragment_history_title">Recently Played</string>

    <!-- Profile Fragment -->
    <string name="fragment_profile_favorites_label">Find out your top artists or tracks</string>
    <string name="fragment_profile_followed_artists_label">See the artists you follow and follow more</string>
    <string name="fragment_profile_playlists_label">See and edit your playlists</string>
    <string name="fragment_profile_favorites">Favorites</string>
    <string name="fragment_profile_followed_artists">Following</string>
    <string name="fragment_profile_playlists">Playlists</string>
    <string name="fragment_profile_rate_us">Rate Us</string>

    <!-- Favorites Fragment -->
    <string name="fragment_favorites_hint_type">Type</string>
    <string name="fragment_favorites_hint_time_range">Time Range</string>
    <string name="fragment_favorites_hint_limit">Amount</string>
    <string name="fragment_favorites_show">Show</string>
    <string name="fragment_favorites_type_empty_error">Please select a type. Artists or Tracks?</string>
    <string name="fragment_favorites_amount_zero_error">Amount must be greater than zero.</string>

    <!-- Top Artists Fragment -->
    <string name="fragment_top_artists_title">Your Top %d Artists</string>

    <!-- Top Tracks Fragment -->
    <string name="fragment_top_tracks_title">Your Top %d Tracks</string>

    <!-- Playlist Fragment -->
    <string name="fragment_playlist_title_see">Your Playlists</string>
    <string name="fragment_playlist_title_add">Pick a Playlist to Add Track</string>
    <string name="fragment_playlist_track_added_to_playlist">%s is added to %s</string>
    <string name="fragment_playlist_track_already_exists_in_playlist">%s already exists in %s</string>
    <string name="fragment_playlist_should_download_spotify">You should download Spotify in order to listen to this playlist</string>

    <!-- Create Playlist Fragment -->
    <string name="fragment_create_playlist_title">Create a Playlist</string>
    <string name="fragment_create_playlist_hint_name">Name</string>
    <string name="fragment_create_playlist_hint_description">Description</string>
    <string name="fragment_create_playlist_hint_public">Public</string>
    <string name="fragment_create_playlist_create">Create</string>
    <string name="fragment_create_playlist_default_playlist_name">Easify</string>
    <string name="fragment_create_playlist_default_playlist_description">Created via Easify</string>

    <!-- Playlist Detail Fragment -->
    <string name="fragment_playlist_detail_removed">%s is removed from this playlist</string>
    <string name="fragment_playlist_detail_empty_playlist">This playlist is empty</string>

    <!-- Followed Artists Fragment -->
    <string name="fragment_followed_artists_title">Artists You Follow</string>
    <string name="fragment_followed_artists_follow_more">Follow More</string>

    <!-- Artist Fragment -->
    <string name="fragment_artist_follower_count">Followers: %d</string>
    <string name="fragment_artist_genres">Genre(s):</string>
    <string name="fragment_artist_follow">Follow</string>
    <string name="fragment_artist_unfollow">Unfollow</string>
    <string name="fragment_artist_snackbar_followed">You follow %s now!</string>
    <string name="fragment_artist_snackbar_unfollowed">You don\'t follow %s anymore</string>

</resources>
