<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.deniz.easify.ui.profile.favorites.FavoritesViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSpotifyBlack">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/typeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:hint="@string/fragment_favorites_hint_type"
            android:textColorHint="@color/colorSpotifyWhite"
            android:background="@color/colorBackgroundLight"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/colorSpotifyWhite"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeRangeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:hint="@string/fragment_favorites_hint_time_range"
            android:textColorHint="@color/colorSpotifyWhite"
            android:background="@color/colorBackgroundLight"

            app:layout_constraintTop_toBottomOf="@id/typeLayout"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeRange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/colorSpotifyWhite"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/limitLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:hint="@string/fragment_favorites_hint_limit"
            android:textColorHint="@color/colorSpotifyWhite"
            android:background="@color/colorBackgroundLight"

            app:layout_constraintTop_toBottomOf="@id/timeRangeLayout"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSpotifyWhite"
                android:inputType="number"
                android:maxLength="2"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:clickable="@{viewmodel.loading ? false : true}"
            android:text="@string/fragment_favorites_show"
            android:textColor="@color/colorSpotifyWhite"
            android:textSize="24sp"
            android:background="@drawable/button_green"

            app:layout_constraintTop_toBottomOf="@id/limitLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="@{viewmodel.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/show"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>