<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.deniz.easify.ui.profile.followings.artist.ArtistViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSpotifyBlack">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/followLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/artistImage"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginTop="32dp"

                    app:imageUrl="@{viewmodel.artist.images.get(1).url}"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/artistName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"

                    android:text="@{viewmodel.artist.name}"
                    android:gravity="center"
                    android:textColor="@color/colorSpotifyWhite"
                    android:textStyle="bold"
                    android:textSize="32sp"

                    app:layout_constraintTop_toBottomOf="@+id/artistImage"
                    app:layout_constraintEnd_toEndOf="@id/artistImage"
                    app:layout_constraintStart_toStartOf="@id/artistImage"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"

                    tools:text="Followers: 12341"
                    android:gravity="center"
                    android:textColor="@color/colorSpotifyWhite"
                    android:textSize="20sp"

                    app:layout_constraintTop_toBottomOf="@+id/artistName"
                    app:layout_constraintEnd_toEndOf="@id/artistName"
                    app:layout_constraintStart_toStartOf="@id/artistName"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genresLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"

                    android:text="@string/fragment_artist_genres"
                    android:gravity="center"
                    android:textColor="@color/colorSpotifyWhite"
                    android:textSize="16sp"

                    app:layout_constraintTop_toBottomOf="@+id/followers"
                    app:layout_constraintEnd_toEndOf="@id/followers"
                    app:layout_constraintStart_toStartOf="@id/followers"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    tools:text="bow pop,\ncompositional ambient,\nfrench soundtrack"
                    android:gravity="center"
                    android:textColor="@color/colorTextGray"
                    android:textSize="16sp"

                    app:layout_constraintTop_toBottomOf="@+id/genresLabel"
                    app:layout_constraintEnd_toEndOf="@id/genresLabel"
                    app:layout_constraintStart_toStartOf="@id/genresLabel"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/followLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/fragment_artist_follow"
                android:textColor="@color/colorSpotifyWhite"
                android:textSize="24sp"
                android:background="@drawable/button_green"
                android:visibility="@{viewmodel.showFollowButton ? View.VISIBLE : View.GONE}"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/unfollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/fragment_artist_unfollow"
                android:textColor="@color/colorSpotifyWhite"
                android:textSize="24sp"
                android:background="@drawable/button_red"
                android:visibility="@{viewmodel.showFollowButton ? View.GONE : View.VISIBLE}"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>